[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jha-cli"
version = "1.0.5"
authors = [
    {name = "Amarjit Jha", email = "jha.amarjit@gmail.com"},
]
description = "JHA - Just Help Assistant. LLM-powered CLI command discovery."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
keywords = ["cli", "llm", "openai", "command", "assistant"]
dependencies = [
    "typer>=0.15.1",
    "openai>=2.8.1",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "rich>=13.9.4",
]

[project.urls]
"Homepage" = "https://github.com/jhaspider/jha-cli"
"Bug Reports" = "https://github.com/jhaspider/jha-cli/issues"
"Source" = "https://github.com/jhaspider/jha-cli"

[project.scripts]
jha = "src.cli:main"
jhax = "src.cli:explain"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]